// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentInstanceTable with instances renders per snapshot 1`] = `
<div>
  <InsightsCommandButton
    data-automation-id="assessment-instance-table-pass-unmarked-instances-button"
    disabled={false}
    iconProps={
      {
        "iconName": "skypeCheck",
      }
    }
    onClick={[Function]}
  >
    Pass unmarked instances
  </InsightsCommandButton>
  <StyledWithViewportComponent
    ariaLabelForGrid="Use arrow keys to navigate inside the instances grid"
    checkboxVisibility={2}
    columns={
      [
        {
          "fieldName": "fieldName",
          "key": "col1",
          "minWidth": 0,
          "name": "col1",
        },
      ]
    }
    constrainMode={1}
    items={
      [
        {
          "instance": {
            "testStepResults": {
              "step": {
                "status": 1,
              },
            },
          },
          "key": "items[0]",
          "statusChoiceGroup": null,
          "visualizationButton": null,
        },
      ]
    }
    onItemInvoked={[Function]}
    onRenderRow={[Function]}
  />
</div>
`;

exports[`AssessmentInstanceTable with instances renders per snapshot with "none" header type 1`] = `
<div>
  <StyledWithViewportComponent
    ariaLabelForGrid="Use arrow keys to navigate inside the instances grid"
    checkboxVisibility={2}
    columns={
      [
        {
          "fieldName": "fieldName",
          "key": "col1",
          "minWidth": 0,
          "name": "col1",
        },
      ]
    }
    constrainMode={1}
    items={
      [
        {
          "instance": {
            "testStepResults": {
              "step": {
                "status": 1,
              },
            },
          },
          "key": "items[0]",
          "statusChoiceGroup": null,
          "visualizationButton": null,
        },
      ]
    }
    onItemInvoked={[Function]}
    onRenderRow={[Function]}
  />
</div>
`;

exports[`AssessmentInstanceTable with null instance data renders a spinner per snapshot 1`] = `
<StyledSpinnerBase
  className="details-view-spinner"
  label="Scanning"
  size={3}
/>
`;
